apps/external/external/resources/ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-ollama
  namespace: traefik
spec:
  ports:
    - name: http
      port: 11434
      targetPort: 11434
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-ollama
  namespace: traefik
subsets:
  - addresses:
      - ip: 10.0.10.92
    ports:
      - name: http
        port: 11434
        protocol: TCP
