apps/external/external/resources/garage-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: external-garage
  namespace: traefik
spec:
  routes:
    - match: Host(`garage.${DOMAIN}`)
      priority: 10
      services:
        - name: external-garage
          port: ui
      middlewares:
        - name: lan-allowlist
          namespace: traefik
