apps/external/external/resources/nas-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: external-nas
  namespace: traefik
spec:
  routes:
    - match: Host(`nas.${DOMAIN}`)
      priority: 10
      services:
        - name: external-nas
          port: http
      middlewares:
        - name: lan-allowlist
          namespace: traefik
